# lodviz-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  tailwind-498bc48706813048.css  web_dashboard-44498e08d532d5fd.js  web_dashboard-44498e08d532d5fd_bg.wasm
.github/workflows/: deploy.yml
apps/web_dashboard/: Cargo.toml  Trunk.ghpages.toml  Trunk.toml  index.html  package.json
apps/web_dashboard/public/: tailwind.css
apps/web_dashboard/public/data/: bar_grouped.csv  bar_stacked.csv  candlestick.csv  multi_series.csv  sales_performance.csv  scatter.csv  sine_wave.csv
apps/web_dashboard/src/: lib.rs  main.rs
apps/web_dashboard/src/components/: mod.rs
apps/web_dashboard/src/components/ui/: mod.rs  navbar.rs  theme_editor.rs
apps/web_dashboard/src/data/: csv_loader.rs
apps/web_dashboard/src/pages/: home.rs
apps/web_dashboard/src/theme/: mod.rs  spacing.rs
apps/web_dashboard/style/: input.css
crates/lodviz_components/: Cargo.toml  README.md
crates/lodviz_components/examples/: README.md
crates/lodviz_components/src/: lib.rs
crates/lodviz_components/src/components/: theme_provider.rs
crates/lodviz_components/src/components/charts/: area_chart.rs  bar_chart.rs  box_plot.rs  candlestick.rs  chord_chart.rs  contour_chart.rs  heatmap.rs  histogram.rs  line_chart.rs  mod.rs  pie_chart.rs  radar.rs  sankey_chart.rs  scatter_chart.rs  smart_chart.rs  strip_chart.rs  waterfall.rs
crates/lodviz_components/src/components/interaction/: brush.rs  linked_context.rs  mod.rs  zoom_pan.rs
crates/lodviz_components/src/components/layout/: card_registry.rs  chart_visibility.rs  draggable_card.rs  global_mouse.rs  mod.rs
crates/lodviz_components/src/components/svg/: axis.rs  bar_tooltip.rs  box_violin_tooltip.rs  candlestick_tooltip.rs  colorbar.rs  grid.rs  heatmap_tooltip.rs  legend.rs  mod.rs  overlay.rs  radar_tooltip.rs  sankey_tooltip.rs  tooltip.rs  waterfall_tooltip.rs
crates/lodviz_components/src/components/table/: column_filter.rs  column_filter_popover.rs  data_table.rs  mod.rs  table_footer.rs  table_header.rs  table_theme.rs  table_toolbar.rs
crates/lodviz_components/src/hooks/: mod.rs  use_container_size.rs
crates/lodviz_core/: Cargo.toml  README.md
crates/lodviz_core/examples/: basic_data.rs  lttb.rs  scales.rs
crates/lodviz_core/src/: lib.rs
crates/lodviz_core/src/algorithms/: arc.rs  beeswarm.rs  chord_layout.rs  contour.rs  lttb.rs  m4.rs  mod.rs  nearest.rs  sankey_layout.rs  stack.rs  statistics.rs
crates/lodviz_core/src/core/: a11y.rs  color_map.rs  csv.rs  data.rs  encoding.rs  field_value.rs  mark.rs  mod.rs  scale.rs  selection.rs  spec.rs  table_data.rs  theme.rs
data/: area_chart.csv  box_data.csv  histogram.csv  large_dataset.csv  pie.csv  radar.csv  smart_bar.csv  smart_line.csv  violin_data.csv  waterfall.csv
