[workspace]
members = [
    "apps/web_dashboard",
    "crates/lodviz_core",
    "crates/lodviz_components",
]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.dev]
# Optimized dev profile for faster compilation
# https://doc.rust-lang.org/cargo/reference/profiles.html#dev
opt-level = 0
debug = 1          # Limited debug info (line tables only)
split-debuginfo = "unpacked"  # Faster builds on Linux

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
