[package]
name = "web_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }

# Local crates
lodviz_core = { path = "../../crates/lodviz_core" }
lodviz_components = { version = "0.1.0", path = "../../crates/lodviz_components" }

[features]
gh-pages = []

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true }
